--- a/signUp.html
+++ b/signUp.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="signUp.css">
+    <link rel="stylesheet" href="css/signUp.css">
     <title>Sign Up</title>
 </head>
 <body>
