some connections between login and sign up added

--- a/public/signUp.html
+++ b/public/signUp.html
@@ -65,7 +65,7 @@
                     <i class="fa-brands fa-google"></i> Sign Up with Google
                 </a>
       
-                  <p style="text-align: center;">Already have an account? <a href="public/signIn.html" class="link-info">Register here</a></p>
+                  <p style="text-align: center;">Already have an account? <a href="signIn.html" class="link-info">Log In here</a></p>
               </form>
             </div>
           </div>
