--- a/public/signIn.html
+++ b/public/signIn.html
@@ -68,7 +68,7 @@
                   <i class="fa-brands fa-google"></i> Sign Up with Google
               </a>
       
-                  <p style="text-align: center;">Don't have an account? <a href="signUp.html" class="link-info">Register here</a></p>
+                  <p style="text-align: center;">Don't have an account? <a href="signUp.html" class="link-info">Sign Up here</a></p>
               </form>
             </div>
           </div>
