--- a/public/signIn.html
+++ b/public/signIn.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <div class="container">
+
+  </div>
 
   <section class="vh-100">
     <div class="container py-5 h-100">
@@ -26,31 +29,35 @@
           <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid"
             alt="Phone image">
         </div>
-        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-          <form>
-            <!-- Email input -->
-            <div class="form-outline mb-4">
+
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
+
+        <!-- <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+          <form onsubmit="login(event)"> -->
+        <!-- Email input -->
+        <!-- <div class="form-outline mb-4">
               <label class="form-label" for="form1Example13">Email address</label>
-              <input type="email" id="form1Example13" class="form-control form-control-lg" />
-            </div>
+              <input type="email" id="email" class="form-control form-control-lg" />
+            </div> -->
 
-            <!-- Password input -->
-            <div class="form-outline mb-4">
+        <!-- Password input -->
+        <!-- <div class="form-outline mb-4">
               <label class="form-label" for="form1Example23">Password</label>
-              <input type="password" id="form1Example23" class="form-control form-control-lg" />
-            </div>
+              <input type="password" id="password" class="form-control form-control-lg" />
+            </div> -->
 
-            <div class="d-flex justify-content-around mb-4">
-              <!-- Checkbox -->
-              <div class="form-check">
+        <!-- <div class="d-flex justify-content-around mb-4"> -->
+        <!-- Checkbox -->
+        <!-- <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                 <label class="form-check-label" for="form1Example3"> Remember me </label>
               </div>
               <a href="#!">Forgot password?</a>
-            </div>
+            </div> -->
 
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Log in</button>
+        <!-- Submit button -->
+        <!-- <button type="submit" class="btn btn-primary btn-lg btn-block">Log in</button>
 
             <div class="divider d-flex align-items-center my-4">
               <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
@@ -58,12 +65,12 @@
 
             <a class="btn btn-primary btn-lg btn-block" style="background-color: #007bff" href="#!" role="button">
               <i class="fa-brands fa-google"></i> Log in with Google
-            </a>
+            </a> -->
 
-            <p style="text-align: center;">Don't have an account? <a href="signUp.html" class="link-info">Sign Up
+        <!-- <p style="text-align: center;">Don't have an account? <a href="signUp.html" class="link-info">Sign Up
                 here</a></p>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -90,9 +97,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-firestore.js"></script>
   <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-  <script src="./scripts/firebaseConfig.js"></script>
-  <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script>
+  <script src="./js/firebaseConfig.js"></script>
+  <script src="./js/login.js"></script>
+  <!-- <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script> -->
 </body>
 
 </html>
