pulled the code from master & structured it

--- a/public/organization.html
+++ b/public/organization.html
@@ -6,7 +6,7 @@
   <title>Resgrant - Organizations</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/organization.css">
 
 </head>
 
@@ -26,7 +26,7 @@
             <!-- <div class="icon" style="background: #6732ff;"> -->
             <!-- <i class="fa fa-briefcase service-icon" style="color: black"></i> -->
             <!-- </div> -->
-            <img src="./img/IEEE.png" alt="" style="padding-bottom: 10px;">
+            <img src="./images/IEEE.png" alt="" style="padding-bottom: 10px;">
 
             <h4 class="title"><a href="">IEEE</a></h4>
 
@@ -39,7 +39,7 @@
           <div class="box">
             <!-- <div class="icon" style="background: #6732ff;"> -->
             <!-- <i class="fa fa-clipboard service-icon" style="color: black;"></i> -->
-            <img src="./img/AICTE.png" alt="" style="padding: 10px;">
+            <img src="./images/AICTE.png" alt="" style="padding: 10px;">
             <!-- </div> -->
 
             <h4 class="title"><a href="">AICTE</a></h4>
@@ -55,7 +55,7 @@
             <!-- <div class="icon" style="background: #6732ff;"> -->
             <!-- <i class="fa fa-chart-bar service-icon" style="color: black;"></i> -->
             <!-- </div> -->
-            <img src="./img/Science.png" alt="" style="padding: 10px;">
+            <img src="./images/Science.png" alt="" style="padding: 10px;">
             <h4 class="title"><a href="">Ministry Of Science & Technology</a></h4>
 
             <p class="description">The Ministry of Science and Technology is the Indian government ministry charged with
@@ -69,7 +69,7 @@
             <!-- <div class="icon" style="background: #6732ff;">
               <i class="fa fa-binoculars service-icon" style="color: black;"></i>
             </div> -->
-            <img src="./img/isro.png" alt="" style="padding: 10px;">
+            <img src="./images/isro.png" alt="" style="padding: 10px;">
 
             <h4 class="title"><a href="">Department of Space Research</a></h4>
 
@@ -85,7 +85,7 @@
             <!-- <div class="icon" style="background: #6732ff;">
               <i class="fa fa-cog service-icon" style="color:black;"></i>
             </div> -->
-            <img src="./img/eu.png" alt="" style="padding: 10px;">
+            <img src="./images/eu.png" alt="" style="padding: 10px;">
 
             <h4 class="title"><a href="">European Commission</a></h4>
 
@@ -101,7 +101,7 @@
             <!-- <div class="icon" style="background: #6732ff;">
               <i class="fa fa-calendar-alt service-icon" style="color: #000;;"></i>
             </div> -->
-            <img src="./img/ICEF.png" alt="" style="padding: 10px;">
+            <img src="./images/ICEF.png" alt="" style="padding: 10px;">
             <h4 class="title"><a href="">India - Canadian Environment Facility</a></h4>
 
             <p class="description">The Indo-Canadian Environment facility (ICEF), a joint initiative of the Governments
