--- a/public/pricing.html
+++ b/public/pricing.html
@@ -6,7 +6,7 @@
   <title>ResGrant - Pricing</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/pricing.css">
 
 </head>
 
