--- a/public/signIn.html
+++ b/public/signIn.html
@@ -98,7 +98,11 @@
   <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
   <script src="./js/firebaseConfig.js"></script>
+
+
   <script src="./js/login.js"></script>
+  <script src="./js/google.js"></script>
+  <script src="./js/facebook.js"></script>
   <!-- <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script> -->
 </body>
