--- a/public/landingPage.html
+++ b/public/landingPage.html
@@ -28,14 +28,14 @@
           <div class="nav-links">
             <a href="#features">Features</a>
             <a href="#features">Events</a>
-            <a href="#pricing">Pricing</a>
+            <a href="pricing.html">Pricing</a>
             <a href="#resources">Resources</a>
-            <a href="#resources">Partners</a>
+            <a href="organization.html">Partners</a>
             <a href="#resources">About Us</a>
           </div>
           <div class="nav-buttons">
-            <a href="../public/signIn.html" class="log-in">Login</a>
-            <a href="../public/signUp.html" class="sign-up btn btn-sm">Sign Up</a>
+            <a href="signIn.html" class="log-in">Login</a>
+            <a href="signIn.html" class="sign-up btn btn-sm">Sign Up</a>
           </div>
         </nav>
         <div class="burger-menu">
@@ -51,7 +51,7 @@
           One stop solution for students finding Research Grants in their
           domain.
         </p>
-        <a href="../public/signUp.html" class="btn btn-lg">Get Started</a>
+        <a href="./signIn.html" class="btn btn-lg">Get Started</a>
       </div>
       <div class="landing-image">
         <!-- <img
