--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="shortcut icon" type="image" href="https://ibb.co/60WyxpG">
   <!-- <a href="https://ibb.co/60WyxpG" rel="shortcut icon"  type="image"><img src="https://i.ibb.co/60WyxpG/RESGRANT-1.png" alt="RESGRANT-1" border="0"></a> -->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/dashboard.css">
 
 </head>
 
@@ -402,10 +402,12 @@
   </section> -->
       <!-- partial -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.js'></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
       <script
         src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.jshttps://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
-      <script src="./script.js"></script>
+      <script src="./js/dashboard.js"></script>
 
 </body>
 
