--- a/demo Page/demo.html
+++ b/demo Page/demo.html
@@ -39,13 +39,13 @@
                 <div class="col">
                   <div class="form-outline">
                     <label class="form-label" for="form3Example1">First name</label>
-                    <input type="text" id="form3Example1" class="form-control" />
+                    <input type="text" id="fname" class="form-control" />
                   </div>
                 </div>
                 <div class="col">
                   <div class="form-outline">
                     <label class="form-label" for="form3Example2">Last name</label>
-                    <input type="text" id="form3Example2" class="form-control" />
+                    <input type="text" id="lname" class="form-control" />
                   </div>
                 </div>
               </div>
@@ -63,7 +63,7 @@
               <!-- Phone Number Input -->
                 <div class="form-outline mb-4">
                     <label class="form-label" for="form6Example6">Phone</label>
-                    <input type="number" id="form6Example6" class="form-control" />
+                    <input type="number" id="Phone" class="form-control" />
                 </div>
 
                 <!-- Location Input -->
@@ -80,7 +80,7 @@
               <!-- Qualification Input -->
               <div class="form-outline mb-4">
                   <label class="form-label" for="location">Highest Qualification Pursuing</label>
-                <select type="qualification" class="browser-default custom-select">
+                <select id="qualification" type="qualification" class="browser-default custom-select">
                     <option value="" disabled selected hidden>--Select Here--</option>
                     <option value="1">High School</option>
                     <option value="2">Under Graduate</option>
@@ -92,7 +92,7 @@
               <!-- Research Domain Input -->
               <div class="form-outline mb-4">
                 <label class="form-label" for="location">Research Domain</label>
-                <select type="research-domain" class="browser-default custom-select">
+                <select id="domain" type="research-domain" class="browser-default custom-select">
                     <option value="" disabled selected hidden>--Select Here--</option>
                     <option value="1">hello</option>
                     <option value="2">Two</option>
@@ -103,7 +103,7 @@
               <!-- organization input -->
               <div class="form-outline mb-4">
                 <label class="form-label" for="location">Organization Name</label>
-                <select type="organization" class="browser-default custom-select" aria-placeholder="">
+                <select id="organization" type="organization" class="browser-default custom-select" aria-placeholder="">
                     <option value="" disabled selected hidden>--Select Here--</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -114,7 +114,7 @@
               <!-- Research Paper Input -->
               <div class="form-outline mb-4">
                 <label for="myfile">Upload Your Published Research Paper : </label>
-                <input type="file" id="myfile" name="myfile">
+                <input type="file" id="research_ppr" name="myfile">
               </div>
 
 
