:sparkle: about us page updated

--- a/Pricing Page/index.html
+++ b/Pricing Page/index.html
@@ -7,12 +7,43 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700'>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="stylesheet" href="../public/css/landing.css ">
 </head>
 
 <body>
   <!-- Pricing Page -->
   <div class="background">
+    <header class="header">
+      <div class="container flex-between">
+        <div class="logo">
+          <a href="#">
+            <!-- <img
+                src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/logo.svg"
+                alt=""
+              /> -->
+            <h1>Pukarr</h1>
+          </a>
+        </div>
+        <nav class="main-navgation flex-between flex-ver-top">
+          <div class="nav-links">
+            <a href="#features">Features</a>
+            <a href="#features">Events</a>
+            <a href="pricing.html">Pricing</a>
+            <a href="#resources">Resources</a>
+            <a href="organization.html">Partners</a>
+            <a href="aboutUs.html">About Us</a>
+          </div>
+          <div class="nav-buttons">
+            <a href="signIn.html" class="log-in">Login</a>
+            <a href="signIn.html" class="sign-up btn btn-sm">Sign Up</a>
+          </div>
+        </nav>
+        <div class="burger-menu">
+          <i class="fa-regular fa-bars icon"></i>
+        </div>
+      </div>
+    </header>
+
     <div class="container">
       <div class="panel pricing-table">
 
@@ -58,6 +89,96 @@
     </div>
   </div>
 
+  <footer class="footer" id="resources">
+    <div class="container">
+      <!-- Website Logo -->
+      <div class="logo">
+        <a href="#">
+          <!-- <img
+            src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/logo.svg"
+            alt=""
+          /> -->
+          <h1 style="color: white">PUKARR</h1>
+        </a>
+      </div>
+      <!-- Quick Links -->
+      <div class="quick-links">
+        <div class="links-group">
+          <span>Features</span>
+          <div>
+            <a href="#">Events</a>
+            <a href="#">Pricing</a>
+            <a href="#">Analytics</a>
+          </div>
+        </div>
+        <div class="links-group">
+          <span>Resources</span>
+          <div>
+            <a href="#">Blog</a>
+            <a href="#">Developers</a>
+            <a href="#">Support</a>
+          </div>
+        </div>
+        <div class="links-group">
+          <span>Company</span>
+          <div>
+            <a href="#">About</a>
+            <a href="#">Our Team</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+      </div>
+      <!-- Social Media -->
+      <div class="social-media">
+        <a href="#">
+          <img
+            src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-facebook.svg"
+            alt="Facebook Logo"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-twitter.svg"
+            alt="Twitter Logo"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-pinterest.svg"
+            alt="Pinterest Logo"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-instagram.svg"
+            alt="Instagram Logo"
+          />
+        </a>
+      </div>
+    </div>
+    <!-- Made By -->
+    <div class="attribution">
+      Made with
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        class="outer-link"
+        target="_blank"
+        >love</a
+      >
+      by team<span class="outer-link"> pukaar</span>.
+      <ul class="social-media">
+        <li>
+          <a
+            href="https://www.codepen.io/FedLover"
+            title="go To My Codepen Account"
+          >
+            <i class="fa-brands fa-codepen icon"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
