--- a/faq Page/faqs.html
+++ b/faq Page/faqs.html
@@ -15,6 +15,7 @@
         <!-- for hover and color -->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="../public/css/landing.css ">
     </head>
     <body>
         <!-- Navigation-->
@@ -125,5 +126,95 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <footer class="footer" id="resources">
+            <div class="container">
+              <!-- Website Logo -->
+              <div class="logo">
+                <a href="#">
+                  <!-- <img
+                    src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/logo.svg"
+                    alt=""
+                  /> -->
+                  <h1 style="color: white">PUKARR</h1>
+                </a>
+              </div>
+              <!-- Quick Links -->
+              <div class="quick-links">
+                <div class="links-group">
+                  <span>Features</span>
+                  <div>
+                    <a href="#">Events</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Analytics</a>
+                  </div>
+                </div>
+                <div class="links-group">
+                  <span>Resources</span>
+                  <div>
+                    <a href="#">Blog</a>
+                    <a href="#">Developers</a>
+                    <a href="#">Support</a>
+                  </div>
+                </div>
+                <div class="links-group">
+                  <span>Company</span>
+                  <div>
+                    <a href="#">About</a>
+                    <a href="#">Our Team</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Contact</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Social Media -->
+              <div class="social-media">
+                <a href="#">
+                  <img
+                    src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-facebook.svg"
+                    alt="Facebook Logo"
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-twitter.svg"
+                    alt="Twitter Logo"
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-pinterest.svg"
+                    alt="Pinterest Logo"
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-instagram.svg"
+                    alt="Instagram Logo"
+                  />
+                </a>
+              </div>
+            </div>
+            <!-- Made By -->
+            <div class="attribution">
+              Made with
+              <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                class="outer-link"
+                target="_blank"
+                >love</a
+              >
+              by team<span class="outer-link"> pukaar</span>.
+              <ul class="social-media">
+                <li>
+                  <a
+                    href="https://www.codepen.io/FedLover"
+                    title="go To My Codepen Account"
+                  >
+                    <i class="fa-brands fa-codepen icon"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </footer>
     </body>
 </html>
