--- a/public/landingPage.html
+++ b/public/landingPage.html
@@ -66,13 +66,13 @@
       <div class="container">
         <!-- Short URL Feature -->
         <div class="url-shorten-feature">
-          <form class="url-shorten-form" id="url-shorten-form" onsubmit="subscribed(event)">
+          <form class="url-shorten-form" id="Subscriptionform">
             <div>
-              <input type="email" class="url-input" placeholder="Subscribe for grant updates..." autocomplete="off"
+              <input type=" email" class="url-input" placeholder="Subscribe for grant updates..." autocomplete="off"
                 id="subscribedEmail" />
               <!-- <span class="alert"></span> -->
             </div>
-            <button type="submit" class="btn btn-lg btn-plus-icon">
+            <button type="submit" class="btn btn-lg btn-plus-icon" id="submit">
               Subscribe
             </button>
           </form>
@@ -285,37 +285,8 @@
 <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 <script src="./js/firebaseConfig.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 
-
-<script>
-  function subscribed(event) {
-    event.preventDefault();
-
-    var email = document.getElementById("subscribedEmail");
-    var today = new Date();
-    var currentdate = today.getFullYear() + '-' + (today.getMonth() + 1) + '-' + today.getDate();
-    firebase.auth().onAuthStateChanged(function (user) {
-      if (user) {
-        db.collection("subscribedUsers").add({
-          email: email,
-          date: currentdate
-        }).then(function () {
-          console.log("Subscribed user added to firestore");
-          // sendMail();
-          // window.location.assign("mainClient.html");
-        }).catch(function (error) {
-          console.log("Error adding new user: " + error);
-        });
-      }
-    });
-
-    var alertstr = "thank you for subscribing";
-
-    alert(alertstr);
-  }
-
-
-
-</script>
+<script src="./js/subscription.js"></script>
 
 </html>
