--- a/DashBoard/index.html
+++ b/DashBoard/index.html
@@ -12,6 +12,7 @@
   <link rel="shortcut icon" type="image" href="https://ibb.co/60WyxpG">
   <!-- <a href="https://ibb.co/60WyxpG" rel="shortcut icon"  type="image"><img src="https://i.ibb.co/60WyxpG/RESGRANT-1.png" alt="RESGRANT-1" border="0"></a> -->
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../public/css/landing.css ">
 
 </head>
 
